# transformerLLM-agentic

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
configs/: train.yaml
configs/data/: wikitext103.yaml
configs/model/: gpt2_small.yaml
configs/optim/: adamw.yaml
notebooks/: deepseek-r1-distill_test.ipynb  llm-application-simple-prompt-langchain.ipynb  seq2seq_translation_tutorial.ipynb  tensorboard_testing_modelLog.ipynb
src/gpt/: model.py
