[project]
name = "transformer-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "dvc[gdrive]>=3.61.0",
    "hydra-core>=1.3.2",
    "mypy>=1.17.1",
    "numpy>=2.3.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "ruff>=0.12.8",
    "tensorboard>=2.20.0",
    "tokenizers>=0.21.4",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.1",
]
