[project]
name = "transformer-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "black>=25.1.0",
    "dvc[gdrive]>=3.62.0",
    "huggingface-hub[hf-xet]>=0.34.4",
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "mypy>=1.17.1",
    "numpy>=1.26,<2.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "ruff>=0.12.8",
    "seaborn>=0.13.2",
    "tensorboard>=2.19,<2.20",
    "tensorflow==2.19.0",
    "tokenizers>=0.21.4",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.55.3",
]

[tool.uv]
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url  = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }